# Floresta

./: .clang-format  .gitignore  CMakeLists.txt  Floresta.resource_order  Floresta.yyp  main.cpp
Floresta/: CMakeLists.txt  main.cpp
Floresta/Game/: CMakeLists.txt  Cube.cpp  Cube.h  TestSprite.cpp  TestSprite.h
Mistral/: CMakeLists.txt  Component.cpp  Component.h  InputManager.h  Mistral.cpp  Mistral.h  ResourcesManager.h
Mistral/Components/: CMakeLists.txt  Component.cpp  Component.h  ComponentSprite.cpp  ComponentSprite.h
Mistral/Managers/: CMakeLists.txt  ComponentsManager.cpp  ComponentsManager.h  InputManager.h  ResourcesManager.cpp  ResourcesManager.h
Mistral/Resources/: CMakeLists.txt  Resource.cpp  Resource.h  ResourceTexture.cpp  ResourceTexture.h
Vendaval/: CMakeLists.txt  main.cpp
animcurves/curve_all/: curve_all.yy
animcurves/curve_recoil/: curve_recoil.yy
animcurves/curve_shell/: curve_shell.yy
datafiles/sections/: tah_city1.tsx
extensions/window_command_hook/: window_command_hook.yy
floresta/: CMakeLists.txt  main.cpp
floresta/editor/: CMakeLists.txt  Vendaval.cpp  Vendaval.h
floresta/game/: CMakeLists.txt  Cube.cpp  Cube.h  TestSprite.cpp  TestSprite.h
floresta/resources/: Cube.glb
fonts/fnt_ubuntu/: fnt_ubuntu.old.yy  fnt_ubuntu.yy
mistral/: CMakeLists.txt  Camera.h  Dependencies.cmake  Entity.cpp  Entity.h  Mistral.cpp  Mistral.h  Random.cpp  Resources.cpp  Resources.h
objects/Debris/: Create_0.gml  Debris.yy  Draw_0.gml  Other_4.gml
objects/DepthSortingAgent/: DepthSortingAgent.yy  Draw_0.gml  Draw_64.gml  Draw_72.gml  Draw_73.gml
objects/LevelEditor/: Alarm_0.gml  CleanUp_0.gml  Create_0.gml  LevelEditor.yy  Step_0.gml
objects/Shadows/: CleanUp_0.gml  Create_0.gml  Draw_0.gml  Shadows.yy
objects/System/: CleanUp_0.gml  Create_0.gml  Draw_0.gml  Draw_64.gml  Draw_72.gml  Draw_73.gml  Draw_74.gml  Draw_75.gml  Draw_76.gml  Draw_77.gml  Other_4.gml  Other_5.gml  Step_0.gml  Step_1.gml  Step_2.gml  System.yy
objects/obj_assistant/: Create_0.gml  Other_10.gml  Step_0.gml  obj_assistant.yy
objects/obj_bazooka/: Create_0.gml  obj_bazooka.yy
objects/obj_bullet/: Create_0.gml  Destroy_0.gml  Other_10.gml  obj_bullet.yy
objects/obj_bullet_explosive/: Create_0.gml  Destroy_0.gml  Other_10.gml  obj_bullet_explosive.yy
objects/obj_character/: Create_0.gml  Draw_0.gml  Other_10.gml  Other_7.gml  Step_0.gml  Step_1.gml  Step_2.gml  obj_character.yy
objects/obj_chicken/: Create_0.gml  obj_chicken.yy
objects/obj_enemy/: Collision_obj_bullet.gml  obj_enemy.yy
objects/obj_entity/: Create_0.gml  Draw_0.gml  Other_10.gml  obj_entity.yy
objects/obj_explosion/: Create_0.gml  Draw_72.gml  Step_0.gml  obj_explosion.yy
objects/obj_gmlive/: obj_gmlive.yy
objects/obj_gun/: Create_0.gml  Draw_0.gml  Other_10.gml  Step_0.gml  obj_gun.yy
objects/obj_intro/: Create_0.gml  Step_0.gml  obj_intro.yy
objects/obj_inventory/: Create_0.gml  Draw_64.gml  Draw_73.gml  Other_10.gml  Step_0.gml  obj_inventory.yy
objects/obj_main_menu/: Create_0.gml  Draw_0.gml  Step_0.gml  obj_main_menu.yy
objects/obj_main_menu_logo/: Step_0.gml  obj_main_menu_logo.yy
objects/obj_npc_parent/: obj_npc_parent.yy
objects/obj_particle/: Create_0.gml  Draw_0.gml  Draw_72.gml  Other_10.gml  obj_particle.yy
objects/obj_player/: Create_0.gml  Draw_73.gml  Other_10.gml  Step_0.gml  Step_1.gml  obj_player.yy
objects/obj_precise_tile_checker/: obj_precise_tile_checker.yy
objects/obj_randy/: obj_randy.yy
scripts/Menu/: Menu.yy  (+1 more)
vendaval/: CMakeLists.txt  Vendaval.cpp  Vendaval.h  main.cpp
(+302 files in other folders)
